# ECEN404-2026SP-Sound-Localization-Robot-4

./: .gitignore  README.md
baby_cry_detection/: README.md  References.txt  pyproject.toml
baby_cry_detection/deployment/: RASPBERRY_PI_DEPLOYMENT_GUIDE.md  SOUND_LOCALIZATION_INTEGRATION.md  audio_buffer.py  audio_filtering.py  audio_pipeline.py  config_pi.py  detector.py  multichannel_detector.py  realtime_baby_cry_detector.py  requirements-pi.txt  temporal_smoother.py
baby_cry_detection/deployment/models/: README.md
baby_cry_detection/deployment/raspberry_pi/: PI_DEPLOYMENT_STEPS.md  README_FILTERING.md  audio_buffer.py  audio_filtering.py  config_pi.py  multichannel_detector.py  multichannel_recorder.py  pi_diagnostics.py  pi_setup.py  realtime_baby_cry_detector.py  robot_baby_monitor.py  sound_localization_interface.py  temporal_smoother.py  test_model_and_filter.py  test_multichannel_detector.py  test_pi_filtering.py  verify_raspberry_pi_files.sh
baby_cry_detection/deployment/tests/: test_baby_cry_detector.py  test_pi_filtering.py  (+1 more)
baby_cry_detection/docs/: DATASET_CREDITS.md  DATASET_SUMMARY.md  FILTERING_IMPROVEMENTS.md  TEST_YOUR_AUDIO.md
baby_cry_detection/scripts/: convert_logs_to_tensorboard.py  generate_filter_slide_plot.py  generate_subsystem_figures.py  preprocess_dataset.py
baby_cry_detection/src/: acoustic_features.py  acoustic_monitoring.py  audio_filter.py  calibration.py  config.py  data_preprocessing.py  dataset.py  evaluate.py  inference.py  model.py  preprocessed_dataset.py  train.py  utils.py
baby_cry_detection/training/: main.py
(+135 files in other folders)
